fixed overflow

--- a/src/assets/scss/main/main.scss
+++ b/src/assets/scss/main/main.scss
@@ -1158,6 +1158,7 @@ button.btn.btn--action.tour-sec {
 	-o-transition: 1s transform cubic-bezier(0.23, 1, 0.32, 1);
 	transition: 1s transform cubic-bezier(0.23, 1, 0.32, 1);
 	transition: 1s transform cubic-bezier(0.23, 1, 0.32, 1), 1s -webkit-transform cubic-bezier(0.23, 1, 0.32, 1);
+	overflow: hidden;
 }
 
 .offcanvas .oriental--site-wrap {
